# src/routes/api.php
@@ -4,6 +4,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\UserController;
+use App\Http\Controllers\Api\V1\Wall\LikeController;
+use App\Http\Controllers\Api\V1\Wall\PostController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -26,8 +28,18 @@ Route::prefix('v1')->namespace('Api\V1')->group(function () {
             Route::get('/user/profile', [UserController::class,'index']);
             Route::post('/generate-scoped-token', [AuthController::class,'generateScopedToken']);
             Route::patch('/user/profile', [UserController::class,'updateProfile']);
+
+
+            Route::prefix('wall')->namespace('Wall')->group(function () { //wall
+
+                Route::post('/toggle-like', [LikeController::class, 'toggleLike']);
+                Route::post('/posts', [PostController::class, 'create']);
+
+            });
+
+
         });
         Route::middleware(['auth:api','scope:Web'])->group(function () {
-            //Route::patch('/user/profile', [UserController::class,'updateProfile']);
+            Route::patch('/user/profile/avatar', [UserController::class,'updateAvatar']);
         });
 });
